added hydrant and target hazard models. Lots of unfinished code in this commit.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@ twisted
 cryptography
 service_identity
 hendrix
+
 django
 psycopg2
 django-chartit
 simplejson
 python-social-auth
 django-twitter-api
+
+#Should come last because of installation errors, and repo deprication.
+pywapi
